Added delete button that is non-functioning

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
           <i class="fa fa-plus buttons"></i> Add Funds
         </button>
         <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+        <button id="clear-btn"><i class="fa fa-exclamation-triangle"></i> Clear Table</button>
         <p class="error"></p>
       </div>
 
