adding styling to header and table

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <div class="total">
-        <div class="total">Your total is: $<span id="total">0</span></div>
+        <div class="total"><i class="fa fa-calculator"></i> Current Balance: $<span id="total">0</span></div>
       </div>
 
       <div class="form">
