updated field static text

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <div class="form">
-        <input type="text" id="t-name" placeholder="Name of transaction" />
+        <input type="text" id="t-name" placeholder="Transaction Name" />
         <input
           type="number"
           min="0"
