--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,7 @@
           id="t-amount"
           placeholder="Transaction amount"
         />
-        <button id="add-btn">
-          <i class="fa fa-plus buttons"></i> Add Funds
-        </button>
+        <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
         <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
         <button id="clear-btn"><i class="fa fa-exclamation-triangle"></i> Clear Table</button>
         <p class="error"></p>
