--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           type="number"
           min="0"
           id="t-amount"
-          placeholder="Transaction amount"
+          placeholder="Transaction Amount"
         />
         <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
         <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
